main/default/objects/Telephone_Information__c/fields/Current_Vendor_VAR__c.field-meta.xml
<CustomField>
    <fullName>Current_Vendor_VAR__c</fullName>
    <label>Current Vendor/VAR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Data Communication LTD</fullName>
            </value>
            <value>
                <fullName>Activo Inc.</fullName>
            </value>
            <value>
                <fullName>Allstream</fullName>
            </value>
            <value>
                <fullName>Americom</fullName>
            </value>
            <value>
                <fullName>Avaya (Direct)</fullName>
            </value>
            <value>
                <fullName>Avtex</fullName>
            </value>
            <value>
                <fullName>Bell</fullName>
            </value>
            <value>
                <fullName>Bell Aliant</fullName>
            </value>
            <value>
                <fullName>BellMTS</fullName>
            </value>
            <value>
                <fullName>Black Box</fullName>
            </value>
            <value>
                <fullName>Bluarc Communications Inc</fullName>
            </value>
            <value>
                <fullName>Brant Telephone Inc.</fullName>
            </value>
            <value>
                <fullName>BroadConnect</fullName>
            </value>
            <value>
                <fullName>BTI</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>CDW</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Cerium Networks</fullName>
            </value>
            <value>
                <fullName>CMS, Inc.</fullName>
            </value>
            <value>
                <fullName>CNR</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Cross Telecom - Arrow3</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>CVE - Cache Valley Electric</fullName>
            </value>
            <value>
                <fullName>Dennison</fullName>
            </value>
            <value>
                <fullName>Dimension Data</fullName>
            </value>
            <value>
                <fullName>Ednetics (K-12)</fullName>
            </value>
            <value>
                <fullName>Enventis</fullName>
            </value>
            <value>
                <fullName>Excel Telecom Inc.</fullName>
            </value>
            <value>
                <fullName>Fidelis Communiations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>