main/default/objects/Telephone_Information__c/fields/Existing_Telephony_ICC_Services__c.field-meta.xml
<CustomField>
    <fullName>Existing_Telephony_ICC_Services__c</fullName>
    <label>Existing Allstream Voice Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>