main/default/objects/Telephone_Information__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the customer has a maintenace plan</description>
    <inlineHelpText>Check if the customer has a maintenace plan</inlineHelpText>
    <label>Maintenance</label>
    <type>Checkbox</type>
</CustomField>