main/default/objects/Telephone_Information__c/fields/Special_Applications__c.field-meta.xml
<CustomField>
    <fullName>Special_Applications__c</fullName>
    <label>Special Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio Conferencing</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Call Recording</fullName>
            </value>
            <value>
                <fullName>CRM Integration</fullName>
            </value>
            <value>
                <fullName>Fax Server</fullName>
            </value>
            <value>
                <fullName>Google Integration</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>Mass Notification</fullName>
            </value>
            <value>
                <fullName>Microsoft Exchange</fullName>
            </value>
            <value>
                <fullName>Microsoft Lync</fullName>
            </value>
            <value>
                <fullName>Mobility Client</fullName>
            </value>
            <value>
                <fullName>Outbound Dialer</fullName>
            </value>
            <value>
                <fullName>SIP 3rd Party Integration</fullName>
            </value>
            <value>
                <fullName>Softphone</fullName>
            </value>
            <value>
                <fullName>Unified Communications</fullName>
            </value>
            <value>
                <fullName>Unified Messaging</fullName>
            </value>
            <value>
                <fullName>Video Conferencing</fullName>
            </value>
            <value>
                <fullName>VoIP-Wifi</fullName>
            </value>
            <value>
                <fullName>Web Collaboration</fullName>
            </value>
            <value>
                <fullName>Wireless Voice Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>