main/default/objects/Telephone_Information__c/fields/System_Model__c.field-meta.xml
<CustomField>
    <fullName>System_Model__c</fullName>
    <label>System Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2400</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>3300</fullName>
            </value>
            <value>
                <fullName>48x</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>6x12</fullName>
            </value>
            <value>
                <fullName>8100</fullName>
            </value>
            <value>
                <fullName>8300</fullName>
            </value>
            <value>
                <fullName>8500</fullName>
            </value>
            <value>
                <fullName>8x8</fullName>
            </value>
            <value>
                <fullName>9751 - 10</fullName>
            </value>
            <value>
                <fullName>9751 - 50</fullName>
            </value>
            <value>
                <fullName>9751 - 70</fullName>
            </value>
            <value>
                <fullName>Andtek</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Axxent</fullName>
            </value>
            <value>
                <fullName>Axxess</fullName>
            </value>
            <value>
                <fullName>BCM50</fullName>
            </value>
            <value>
                <fullName>BCS</fullName>
            </value>
            <value>
                <fullName>Call Manager</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>Definity</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>Enventis</fullName>
            </value>
            <value>
                <fullName>Executech</fullName>
            </value>
            <value>
                <fullName>Fonality</fullName>
            </value>
            <value>
                <fullName>HDX</fullName>
            </value>
            <value>
                <fullName>HighPath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>