main/default/objects/Telephone_Information__c/fields/Type_of_Phone_System__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Phone_System__c</fullName>
    <label>Type of Phone System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPE</fullName>
            </value>
            <value>
                <fullName>Hosted Cloud</fullName>
                <label>Hosted / Cloud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>