main/default/objects/Telephone_Information__c/fields/Year_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Year_Purchased__c</fullName>
    <label>Year Purchased</label>
    <type>Date</type>
</CustomField>